# neighborhood-library-service

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: app_factory.py  books.py  circulation.py  deps.py  errors.py  fines.py  grpc_servicer.py  health.py  members.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: entities.py  session.py
backend/app/models/: base.py  entities.py
backend/app/schemas/: library.py
backend/app/scripts/: seed.py
backend/app/services/: books_service.py  exceptions.py  fine_policy.py  fines_service.py  loans_service.py  members_service.py  pagination.py  proto_enum_maps.py  validators.py
backend/app/utils/: timeutil.py
frontend/: .env.local.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  layout.tsx  page.tsx
frontend/src/components/: AppNav.tsx  DataTable.test.tsx  DataTable.tsx  FormDialog.test.tsx  FormDialog.tsx  ListPaginationBar.tsx  SWRProvider.tsx
frontend/src/lib/: api-client.ts  api-endpoints.test.ts  api-endpoints.ts  fetch-all-pages.ts  form-validation.test.ts  form-validation.ts  list-cursor-nav.test.ts  (+4 more)
scripts/: compile_protos.sh  docker-entrypoint-backend.sh  init_db.sql  migrate_fines.sql
tests/: conftest.py  test_books_fieldmask.py  test_fine_policy.py  test_grpc_smoke.py  test_pagination.py  test_proto_enum_maps.py  test_rest_borrow_integration.py  test_timeutil.py
(+18 files in other folders)
