[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neighborhood-library"
version = "0.2.0"
description = "Neighborhood Library: gRPC + REST, PostgreSQL, SQLAlchemy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "grpcio-reflection>=1.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pip-tools>=7.0.0",
]

[project.scripts]
library-server = "app.main:main"

[tool.setuptools.package-dir]
"" = "backend"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "integration: requires PostgreSQL",
]

[tool.ruff]
line-length = 100
target-version = "py39"
